Add collaboration section and remove script tag

--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
             <!-- Collaboration -->
             <div class="level">
                 <div class="level-title" id="collaboration">Collaboration</div>
+              <div class="connection"></div>
+              <div class="fork">
+              <div class="node" data-info="collaborators">Add a collaborator</div>
+              </div>
               <div class="inline-description">
                 <p><strong>Prerequisite:</strong> Before creating a pull request, you need to have created and worked on another branch (e.g., <code>dev</code>) and pushed your changes to GitHub. A PR is used when you want to merge that branch into the <code>main</code> (production) branch, and you need approval first.
   </p>
@@ -233,7 +237,5 @@
     &copy; 2025 QAHE Ltd ACE Team. All rights reserved.
   </p>
 </footer>
-<script src="script.js"></script>
-
   </body>
 </html>
